[package]
name = "cli-todo"
version = "0.1.0"
authors = ["Lucas Antunes <lucasba8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
serde = { version = "1.0.106", features = [ "derive" ] }
serde_json = "1.0"
dirs = "2.0.2"
chrono = "0.4.0"
clap = "2.33.1"